# ExplicitGenomeSpeciation

./: .gitignore  .travis.yml  Buffer.cpp  Buffer.h  BufferBox.cpp  BufferBox.h  CMakeLists.txt  EGS  EGS.pri  EGS.pro  EGS_gui.pro  EGS_sim  EGS_test.pri  EGS_test.pro  GeneticArchitecture.cpp  GeneticArchitecture.h  Genome.cpp  Genome.h  Individual.cpp  Individual.h  MANUAL.md  OutputFile.cpp  OutputFile.h  OutputFiles.cpp  OutputFiles.h  ParameterSet.cpp  ParameterSet.h  Population.cpp  Population.h  README.md  accessories.h  analysis.cpp  analysis.h  architecture.cpp  combine.py  compiler.sh  crosscompiletowindows.sh  deploy.py  example.txt  heatmap.py  (+43 more)
Tests/: test.cpp
archive/: analysis.h  architecture.cpp  genomicSignaturesOfSpeciation180630.tex  individual.cpp  individual.h  main.cpp  random.cpp  random.h
ciSetup/: get_code_cov  setup.pro  setupTest.pro
ci_setup/: EGS.pri  EGS_test.pri  EGS_test.pro  program_test.pri  program_test.pro  setup.pri  setup.pro  setupTest.pro
cluster/: EGS  README.md  build_target.sh  deploy.py  file.txt  job.sh  parameters.txt  protocol.txt  pytilities.py  rerun_simulations.sh  run_simulations.sh
cluster/sim_mutation_0.001_ecosel_0.1_r3/: parameters.txt
cluster/sim_mutation_0.001_ecosel_0.2_r3/: parameters.txt
cluster/sim_mutation_0.01_ecosel_0.1_r4/: parameters.txt
cluster/sim_mutation_0.01_ecosel_0.2_r4/: parameters.txt
draft/: GeneticArchitecture.cpp  GeneticArchitecture.h  GeneticArchitectureTests.cpp  Individual.cpp  Individual.h  Network.cpp  ParameterSet.cpp  ParameterSet.h  Population.cpp  Population.h  doMain.cpp  main.cpp
egssimtools/: .RData  .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE  README.md  job.sh  param2.txt  parameters.txt  paramlog.txt  plot_individuals_through_time.R  report.Rmd  report.nb.html  scratchpad.R  scratchpad2.R  test.R  vignette.Rmd  vignette.html
egssimtools.Rcheck/: egssimtools-Ex.R  egssimtools-Ex.Rout  egssimtools-Ex.timings
egssimtools.Rcheck/egssimtools/: DESCRIPTION  INDEX
gui/: README.md  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  qcustomplot.cpp
lib/: CMakeLists.txt  GeneticArchitecture.cpp  Individual.cpp  Individual.h  ParameterSet.cpp  ParameterSet.h  Population.cpp  Population.h  doMain.cpp  doMain.h
original/: analysis.cpp  architecture.cpp  individual.cpp  main.cpp  random.cpp  random.h
plotting/: difference.py  heatmap.py  heatscan.py  hist.py  length.py  plot.py  read.py  scan.py
python/: plot.py
sim_-mutation_0.001_-nvertices_100_50_50/: parameters.txt
sim_-mutation_0.001_-nvertices_50_50_50/: parameters.txt
sim_-mutation_0.01_-nvertices_100_50_50/: parameters.txt
sim_-mutation_0.1_-nvertices_100_50_50/: parameters.txt
sim_-mutation_0.1_-nvertices_50_50_50/: parameters.txt
test/: CMakeLists.txt  EGS  GeneticArchitectureTest.cpp  ParameterSetTest.cpp  PopulationTest.cpp  TestFixtureCreateArchitectureFile.h  doMainTest.cpp  parameters.txt  paramlog.txt
tests/: CMakeLists.txt  CollectorTests.cpp  DemeFixture.h  DemeTests.cpp  GenArchTests.cpp  GenFixture.h  GeneticArchitectureTest.cpp  GeneticArchitectureTests.cpp  GenomeTests.cpp  IndividualTests.cpp  MetaPopTests.cpp  NetworkTests.cpp  OutputTests.cpp  ParameterSetTests.cpp  PopFixture.h  PopulationTests.cpp  SimulTests.cpp  TestFixtureCreateParameterFiles.h  TestFixtureDefaultPopulationSartingKit.h  TestFixtureMakeAPopulation.h  TestUtilities.cpp  TestUtilities.h  doMainTests.cpp  testUtilities.h  tests.cpp  utilsTest.cpp
(+395 files in other folders)
